@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: January 18, 2011</p>
+      <p>Last Updated: January 19, 2011</p>
     </td>
   </tr>
 </table>
@@ -2116,6 +2116,8 @@ nuttx-5.17 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
       class driver.
     * configs/olimex-lpc1766stk/hidkbd - Added a configuration to build the
       USB host HID keyboard class driver test for the LPC17xx.
+    * Ran the tool CppCheck (http://sourceforge.net/apps/mediawiki/cppcheck) and
+      fixed several errors in the code identified by the tool.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
